--- a/DialogX/build.gradle
+++ b/DialogX/build.gradle
@@ -42,6 +42,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        android {
+        }
     }
 }
 
