--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
         android:supportsRtl="true"
         android:theme="@style/MAppTheme">
 
-        <activity android:name=".ui.activity.SplashActivity">
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -96,7 +96,7 @@
         </provider>
 
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.activity.SplashActivity"
             android:alwaysRetainTaskState="true"
             android:launchMode="singleTask" />
         <activity android:name=".ui.activity.SearchBookActivity" />
